--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.element.scaledisplay.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.element.scaledisplay.css
@@ -1,9 +1,11 @@
-.mb-element-scaleline {
+.mb-element-scaledisplay {
     position: absolute;
-    font-size: 10px;
+    font-size: 12px;
     z-index: 1009;
+    width: auto;
+    height: auto;
 }
 
-.mb-element-scaleline.inline {
+.mb-element-scaledisplay.inline {
     position: static;
 }
