remove iconBig css class

--- a/src/Mapbender/CoreBundle/Resources/views/Element/activityindicator.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/activityindicator.html.twig
@@ -1,1 +1,1 @@
-<span id="{{ id }}" class="mb-element mb-element-activityindicator iconActivity iconBig right-bottom" title="{{ configuration.tooltip|default(title)|trans }}"></span>
+<span id="{{ id }}" class="mb-element mb-element-activityindicator iconActivity right-bottom" title="{{ configuration.tooltip|default(title)|trans }}"></span>
