deactivate copyright link logic - will be supported in the next versions

--- a/src/Mapbender/ManagerBundle/Resources/views/Element/copyright.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/copyright.html.twig
@@ -7,10 +7,15 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.copyright_text) }}{{ form_widget(form.configuration.copyright_text) }}
     <div class="clearContainer"></div>
-    {{ form_label(form.configuration.dialog_link) }}{{ form_widget(form.configuration.dialog_link) }}
-    <div class="clearContainer"></div>
     {{ form_label(form.configuration.dialog_title) }}{{ form_widget(form.configuration.dialog_title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.dialog_content) }}{{ form_widget(form.configuration.dialog_content) }}
     <div class="clearContainer"></div>
+
+    {#
+      WATCHOUT:
+      Copyright link is not supported in v.3.0.0.0.
+      Support comes in the next versions
+      {form_rest(form)}
+     #}
 </div>
