wmc components changed

--- a/src/Mapbender/WmcBundle/Resources/views/Element/wmchandler.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Element/wmchandler.html.twig
@@ -6,6 +6,8 @@
             <li id="tab-wmc-load" class="tab active">{{'Load'|trans }}<li>
         </ul>
         <div id="container-wmc-edit" class="container">
+            <span id="wmc-new">{{ 'Create New Wmc' | trans }}</span>
+            <div id="container-wmc-form"></div>
         </div>
         <div id="container-wmc-load" class="container active">
         </div>
