--- a/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmchandler.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmchandler.html.twig
@@ -1,15 +1,24 @@
 <div class="elementFormWmsLoader elementForm">
-    <div class="left">
-        {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"Auto open"|trans}}</label>
-    </div>
-        {{ form_widget(form.configuration.useEditor) }}<label for="{{form.configuration.useEditor.vars.id}}" class="labelCheck">{{"Use Editor"|trans}}</label>
-    <div class="clearContainer"></div>
-        {{ form_widget(form.configuration.keepBaseSources) }}<label for="{{form.configuration.keepBaseSources.vars.id}}" class="labelCheck">{{"Keep Base Sources"|trans}}</label>
-    <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
     <div class="clearContainer"></div>
+    <div class="left">
+        {{ form_widget(form.configuration.keepBaseSources) }}<label for="{{form.configuration.keepBaseSources.vars.id}}" class="labelCheck">{{"Keep Base Sources"|trans}}</label>
+    </div>        
+    <div class="clearContainer"></div>
+    <div class="left">
+        {{ form_widget(form.configuration.useLoader) }}<label for="{{form.configuration.useLoader.vars.id}}" class="labelCheck">{{"Use useLoader"|trans}}</label>
+    </div>        
+    <div class="clearContainer"></div>
+    <div class="left">
+        {{ form_widget(form.configuration.useEditor) }}<label for="{{form.configuration.useEditor.vars.id}}" class="labelCheck">{{"Use Editor"|trans}}</label>
+    </div>        
+    <div class="clearContainer"></div>
+    <div class="left">
+        {{ form_widget(form.configuration.useSuggestMap) }}<label for="{{form.configuration.useSuggestMap.vars.id}}" class="labelCheck">{{"Use Suggest Map"|trans}}</label>
+    </div>        
+    <div class="clearContainer"></div>    
 </div>
