--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/form.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/form.html.twig
@@ -27,6 +27,9 @@
         {{ form_label(form.screenshot) }}{{ form_widget(form.screenshot) }}
         <div class="clearContainer"></div>
         {{ form_row(form._token) }}
+        <br/>
+        <div class="clearContainer"></div>
         <input type="submit" class="button right" name="{{ 'Save' | trans }}" />
+        <div class="clearContainer"></div>
     </div>
 </form>
