--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/wmc110_layer.xml.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/wmc110_layer.xml.twig
@@ -17,6 +17,7 @@
             <Extension>
                 <mb3:transparent>{% if source.configuration.options.transparent %}true{% else %}false{% endif %}</mb3:transparent>
                 <mb3:opacity>{{ source.configuration.options.opacity }}</mb3:opacity>
+                <mb3:tiled>{{ source.configuration.options.tiled }}</mb3:tiled>
             </Extension>
         </Layer>
         {% endif %}
