--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/wmc110_simple.xml.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/wmc110_simple.xml.twig
@@ -87,6 +87,7 @@
             <Extension>
                 <mb3:transparent>{% if source.configuration.options.transparent %}true{% else %}false{% endif %}</mb3:transparent>
                 <mb3:opacity>{{ source.configuration.options.opacity }}</mb3:opacity>
+                <mb3:tiled>{{ source.configuration.options.tiled }}</mb3:tiled>
                 <mb3:layers>
                     {% for layer in source.configuration.children[0].children %}
                     <mb3:layer name="{{layer.options.name}}" title="{{layer.options.name}}" visible="{% if layer.state.visibility %}true{% else %}false{% endif %}" queryable="{% if layer.state.info %}true{% else %}false{% endif %}"/>
