--- a/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmchandler.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmchandler.html.twig
@@ -5,6 +5,8 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.accessRoles) }}{{ form_widget(form.configuration.accessRoles) }}
+    <div class="clearContainer"></div>
     <div class="left">
         {{ form_widget(form.configuration.keepBaseSources) }}<label for="{{form.configuration.keepBaseSources.vars.id}}" class="labelCheck">{{"Keep Base Sources"|trans}}</label>
     </div>        
