--- a/src/Mapbender/CoreBundle/Resources/views/Element/scaledisplay.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/scaledisplay.html.twig
@@ -1,2 +1,2 @@
-<div id="{{ id }}" class="mb-element mb-element-scaledisplay {{configuration.anchor}}">
-</div>
+<span id="{{ id }}" class="mb-element mb-element-scaledisplay {{configuration.anchor}}">
+</span>
