--- a/src/Mapbender/ManagerBundle/Resources/views/Element/scaledisplay.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/scaledisplay.html.twig
@@ -1,6 +1,8 @@
 <div class="elementFormScaleDisplay elementForm">
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.anchor) }}{{ form_widget(form.configuration.anchor) }}
