--- a/src/Mapbender/WmcBundle/Resources/views/Element/wmchandler.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Element/wmchandler.html.twig
@@ -8,7 +8,7 @@
         </ul>
     </div>
     {% endif %}
-    {% if configuration.useEditor == true %}
+    {% if configuration.useEditor == true and accessEditor == true %}
     <div id="wmceditor" title="{{ "Wmc Editor"|trans }}">
         <div  id="wmcEditorTabContainer" class="tabContainer wmcEditorTabContainer">
             <ul class="tabs">
