--- a/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmchandler.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmchandler.html.twig
@@ -5,22 +5,26 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
     <div class="clearContainer"></div>
-    {{ form_label(form.configuration.accessRoles) }}{{ form_widget(form.configuration.accessRoles) }}
-    <div class="clearContainer"></div>
     <div class="left">
         {{ form_widget(form.configuration.keepBaseSources) }}<label for="{{form.configuration.keepBaseSources.vars.id}}" class="labelCheck">{{"Keep Base Sources"|trans}}</label>
     </div>        
     <div class="clearContainer"></div>
     <div class="left">
-        {{ form_widget(form.configuration.useLoader) }}<label for="{{form.configuration.useLoader.vars.id}}" class="labelCheck">{{"Use useLoader"|trans}}</label>
-    </div>        
-    <div class="clearContainer"></div>
-    <div class="left">
-        {{ form_widget(form.configuration.useEditor) }}<label for="{{form.configuration.useEditor.vars.id}}" class="labelCheck">{{"Use Editor"|trans}}</label>
-    </div>        
-    <div class="clearContainer"></div>
-    <div class="left">
         {{ form_widget(form.configuration.useSuggestMap) }}<label for="{{form.configuration.useSuggestMap.vars.id}}" class="labelCheck">{{"Use Suggest Map"|trans}}</label>
     </div>        
-    <div class="clearContainer"></div>    
+    <div class="clearContainer"></div> 
+    <div class="left">
+        {{ form_widget(form.configuration.useLoader) }}<label for="{{form.configuration.useLoader.vars.id}}" class="labelCheck">{{"Use Loader"|trans}}</label>
+    </div>
+    {{ form_widget(form.configuration.accessLoaderAnonymous) }}<label for="{{form.configuration.accessLoaderAnonymous.vars.id}}" class="labelCheck">{{"Access Loader Anonymous"|trans}}</label>
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.accessGroupsLoader) }}{{ form_widget(form.configuration.accessGroupsLoader) }}
+    <div class="clearContainer"></div>  
+    <div class="left">
+        {{ form_widget(form.configuration.useEditor) }}<label for="{{form.configuration.useEditor.vars.id}}" class="labelCheck">{{"Use Editor"|trans}}</label>
+    </div>
+    {{ form_widget(form.configuration.accessEditorAnonymous) }}<label for="{{form.configuration.accessEditorAnonymous.vars.id}}" class="labelCheck">{{"Access Editor Anonymous"|trans}}</label>
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.accessGroupsEditor) }}{{ form_widget(form.configuration.accessGroupsEditor) }}
+    <div class="clearContainer"></div>   
 </div>
