parameter 'displayPrefix' added

--- a/src/Mapbender/CoreBundle/Resources/views/Element/scaledisplay.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/scaledisplay.html.twig
@@ -1,2 +1,2 @@
-<span id="{{ id }}" class="mb-element mb-element-scaledisplay {{configuration.anchor}}">
+<span id="{{ id }}" class="mb-element mb-element-scaledisplay {{configuration.anchor}}">{% if configuration.displayPrefix is defined %}{{configuration.displayPrefix|trans}}{% endif %}<span></span>
 </span>
