--- a/src/Mapbender/CoreBundle/Resources/views/Element/scaledisplay.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/scaledisplay.html.twig
@@ -1,2 +1,2 @@
-<span id="{{ id }}" class="mb-element mb-element-scaledisplay {{configuration.anchor}}">{{configuration.displayPrefix|trans}}<span></span>
+<span id="{{ id }}" class="mb-element mb-element-scaledisplay {{configuration.anchor}}">{{configuration.scalePrefix|trans}}<span></span>
 </span>
