--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/scaledisplay.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/scaledisplay.html.twig
@@ -5,6 +5,10 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.scalePrefix) }}{{ form_widget(form.configuration.scalePrefix) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.unitPrefix) }}{{ form_widget(form.configuration.unitPrefix) }}
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.anchor) }}{{ form_widget(form.configuration.anchor) }}
     <div class="clearContainer"></div>
 </div>
