--- a/src/Mapbender/CoreBundle/Resources/views/Element/search_router.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/search_router.html.twig
@@ -1,15 +1,14 @@
 <div class="mb-element mb-element-search-router" id="{{ element.id }}" title="{{ element.title }}">
-    {{ form_row(element.getRouteSelectForm.route) }}
-    <hr/>
-    <div class="search-forms">
-    {% for form in element.forms %}
-    <form name="{{ form.name }}">
-        {{ form_row(form.createView) }}
-    </form>
-    {% endfor %}
+    {{ form_label(element.getRouteSelectForm.route) }}{{ form_widget(element.getRouteSelectForm.route) }}
+
+    <div class="search-forms" novalidate="novalidate">
+        {% for form in element.forms %}
+            <form name="{{ form.name }}">
+                {{ form_row(form.createView) }}
+            </form>
+        {% endfor %}
     </div>
-    <a href="#" role="search_router_search">{{ 'Search' | trans }}</a>
-    <hr/>
-    <div class="search-results">
-    </div>
+    <div class="search-results"></div>
+
+    <a href="#" class="button right" role="search_router_search">{{ 'Search' | trans }}</a>
 </div>
