--- a/src/Mapbender/ManagerBundle/Resources/views/Element/zoombar.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/zoombar.html.twig
@@ -9,7 +9,7 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.components) }}{{ form_widget(form.configuration.components) }}
     <div class="clearContainer"></div>
-    {{ form_label(form.configuration.target_map) }}{{ form_widget(form.configuration.target_map) }}
+    {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.stepSize) }}{{ form_widget(form.configuration.stepSize) }}
     <div class="clearContainer"></div>
