--- a/src/Mapbender/WmsBundle/Resources/views/Repository/form.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/form.html.twig
@@ -2,20 +2,20 @@
   <legend>{{"OGC WMS"|trans}}</legend>
   <form action="{{path('mapbender_wms_repository_create')}}" method="post" novalidate="novalidate">
       <label class="left labelInput" for="{{ form.originUrl.get('id') }}">{{"Serviceurl:" | trans}}</label>
-      {{ form_widget(form.originUrl, { 'attr': {'class': 'input'} }) }}
+      {{ form_widget(form.originUrl) }}
       <div class="clearContainer"></div>
 
       <label class="left labelInput" for="{{ form.username.get('id') }}">{{"Username:" | trans}}</label>
-      {{ form_widget(form.username, { 'attr': {'class': 'input'} }) }}
+      {{ form_widget(form.username) }}
       <div class="clearContainer"></div>
 
       <label class="left labelInput" for="{{ form.password.get('id') }}">{{"Password:" | trans}}</label>
-      {{ form_widget(form.password, { 'attr': {'class': 'input'} }) }}
+      {{ form_widget(form.password) }}
       <div class="clearContainer"></div>
 
       <div class="right">
         <input class="button" type="submit" name="load" value="{{"Load"|trans}}" />
-        <a href="{{path('mapbender_manager_repository_index')}}" class="button critical">Cancel</a>
+        <a href="{{path('mapbender_manager_repository_index')}}" class="button critical">{{"Cancel"|trans}}</a>
       </div>
       {{ form_row(form._token) }}
   </form>
