Removed unused jquery-ui css; Replaced components.js with dropdown.js

--- a/src/Mapbender/CoreBundle/Resources/views/frontend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/frontend.html.twig
@@ -1,8 +1,6 @@
 {% extends "FOMCoreBundle::skel.html.twig" %}
 
-{% block css %}
-  <link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/mapquery/lib/jquery/themes/base/jquery-ui.css') }}" />
-{% endblock %}
+{% block css %}{% endblock %}
 
 {% block content %}
     {% block frontend_content %}{% endblock %}
