Manager: Copy application (using GET for now)

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
@@ -29,6 +29,10 @@
               <a class="iconEdit iconBig" href="{{ path('mapbender_manager_application_edit',  {'slug': application.slug}) }}" title="{{ 'Edit' | trans }} {{ application.title }}"></a>
             {% endif %}
 
+            {% if is_granted('CREATE', application) %}
+              <a class="iconCopy iconBig" href="{{ path('mapbender_manager_application_copydirectly', {'slug': application.slug}) }}" title="{{ 'Copy'|trans }}">C</a>
+            {% endif %}
+
             {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') and is_granted('EDIT', application) %}
               <a href="#" class="iconPublish iconBig {% if application.published %}enabled iconPublishActive{% else %}disabled{% endif %}" title="{{ 'Publish / Unpublish' | trans }} {{ application.title }}" data-application-slug="{{ application.slug }}"></a>
             {% endif %}
