--- a/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmcloader.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmcloader.html.twig
@@ -5,6 +5,8 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.components) }}{{ form_widget(form.configuration.components) }}
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.keepSources) }}{{ form_widget(form.configuration.keepSources) }}
     <div class="left">
         {{ form_widget(form.configuration.keepExtent) }}<label for="{{form.configuration.keepExtent.vars.id}}" class="labelCheck">{{"Keep Extent"|trans}}</label>
