Elements: AboutDialog, Copyright changed to popup2

--- a/src/Mapbender/CoreBundle/Resources/views/Element/copyright.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/copyright.html.twig
@@ -1,11 +1,1 @@
-<span id="{{ id }}" class="mb-element mb-element-copyright {{configuration.anchor}}"  title="{{ configuration.tooltip|default(title)|trans }}">
-    {% if configuration.link_type == 'url' %}
-    <span class="smallText span-copyright"><a id="{{ id }}-link" class="mb-element-copyright-link" href="{{ configuration.link_url }}" target="_BLANK">{{ configuration.copyright_text |trans |raw }}</a></span>
-    {% elseif configuration.link_type == 'dialog' %}
-    <br/>
-    <span id="{{ id }}-link" class="mb-element-copyright-link">{{ configuration.copyright_link |trans |raw }}</span>
-    <div id="{{ id }}-dialog" class="mb-element-copyright-dialog" title="{{ configuration.dialog_title |trans |raw }}">
-        <p class="mb-element-copyright-content">{{ configuration.dialog_content |trans |raw }}</p>
-    </div>
-    {% endif %}
-</span>
+<div id="{{ id }}" class="mb-element mb-element-copyright"  title="{{ configuration.tooltip|default(title)|trans }}"></div>
