Element layertree popup2 added

--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -1,4 +1,4 @@
-<div id="{{ id }}" class="mb-element mb-element-layertree">
+<div id="{{ id }}" class="mb-element mb-element-layertree" title="{{ configuration.tooltip|default(title)|trans }}">
   <li class="hide-elm leave showLeaves">
     <div class="leaveContainer">
       <span class="layer-spinner"></span>
