Element wmxloader added popup2

--- a/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
@@ -1,4 +1,4 @@
-<div id="{{ id }}" class="mb-element mb-element-wmsloader" title="{{ configuration.tooltip|default(title)|trans }}">
+<div id="{{ id }}" class="mb-element mb-element-wmsloader" title="{{ title |trans }}">
     <p class="description">{{ "Example"|trans }}: http://www.example.com/wms/services?request=GetCapabilities&amp;service=WMS&amp;version=1.1.1</p>
     <br>
     <label class="labelInput" for="loadWmsUrl">{{"Service url"|trans}}</label>
