Element name from element title set

--- a/src/Mapbender/CoreBundle/Resources/views/Element/scaleselector.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/scaleselector.html.twig
@@ -2,7 +2,7 @@
   <span class="labelInput">{{ title|trans }}</span>
 {% endif %}
 <div id="{{ id }}" class="mb-element mb-element-scaleselector dropdown">
-  <select class="hiddenDropdown" title="{{ configuration.tooltip|default(title)|trans }}"></select>
+  <select class="hiddenDropdown" title="{{ title|trans }}"></select>
   <div class="dropdownValue iconDown"></div>
   <ul class="dropdownList"></ul>
 </div>
