--- a/src/Mapbender/CoreBundle/Resources/views/Element/copyright.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/copyright.html.twig
@@ -1,1 +1,1 @@
-<div id="{{ id }}" class="mb-element mb-element-copyright"  title="{{ configuration.tooltip|default(title)|trans }}"></div>
+<div id="{{ id }}" class="mb-element mb-element-copyright"  title="{{ title|trans }}"></div>
