--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/printclient.html.twig
@@ -9,12 +9,10 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.scales) }}{{ form_widget(form.configuration.scales) }}
     <div class="clearContainer"></div>
-    <div class="left">
-        {{ form_widget(form.configuration.print_directly) }}<label for="{{form.configuration.print_directly.vars.id}}" class="labelCheck">{{"Print directly"|trans}}</label>
-    </div>
     {{ form_widget(form.configuration.rotatable) }}<label for="{{form.configuration.rotatable.vars.id}}" class="labelCheck">{{"Rotatable"|trans}}</label>
     <div class="clearContainer"></div>
-
+    {{ form_label(form.configuration.file_prefix) }}{{ form_widget(form.configuration.file_prefix) }}
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.quality_levels) }}
     {% for level in form.configuration.quality_levels %}
         <div class="singleRow">
