--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/wmcloader-list.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/wmcloader-list.html.twig
@@ -18,7 +18,7 @@
             <td class="typeColumn description">{{ wmc.state.title }}</td>
             <td class="typeColumn description">{{ wmc.abstract }}</td>
             <td class="iconColumn">
-                <span class="iconEdit iconSmall loadWmc" title="{{"Load Wmc"|trans}}  {{wmc.state.title}}" data-id="{{ wmc.id }}"></span>
+                <span class="iconView iconSmall loadWmc" title="{{"View Wmc"|trans}}  {{wmc.state.title}}" data-id="{{ wmc.id }}"></span>
             </td>
         </tr>
         {% endif %}
