wmsloader example changed

--- a/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
@@ -1,5 +1,5 @@
 <div id="{{ id }}" class="mb-element mb-element-wmsloader" title="{{ title |trans }}">
-    <p class="description">{{ "Example"|trans }}: http://www.example.com/wms/services?request=GetCapabilities&amp;service=WMS&amp;version=1.1.1</p>
+    <p class="description">{{ "Example"|trans }}: http://wms.wheregroup.com/cgi-bin/germany.xml?VERSION=1.1.1&REQUEST=GetCapabilities&SERVICE=WMS</p>
     <br>
     <label class="labelInput" for="loadWmsUrl">{{"Service url"|trans}}</label>
     <input name="loadWmsUrl" class="input url" type="text" />
