--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
@@ -28,7 +28,7 @@
                 <td class="typeColumn description">{{ instance.source.type }}</td>
                 <td class="iconColumn">
                   <div class="checkWrapper left iconCheckbox iconSmall {% if instance.enabled %}iconCheckboxActive{% endif %}" title="{{"Toggle show/hide instance"|trans}} {{instance.title}}">
-                    <input class="checkbox" data-href="{{ path('mapbender_manager_repository_instanceenabled', {'slug': application.slug,'layersetId': layerset.id, 'instanceId': instance.id})}}" data-id="{{ instance.id }}" type="checkbox" {% if instance.enabled %} checked="checked" {% endif %}>
+                    <input class="checkbox" data-url="{{ url('mapbender_manager_repository_instanceenabled', {'slug': application.slug,'layersetId': layerset.id, 'instanceId': instance.id})}}" data-id="{{ instance.id }}" type="checkbox" {% if instance.enabled %} checked="checked" {% endif %}>
                   </div>
                   <a class="iconEdit iconSmall editInstance" title="{{"Edit instance"|trans}} {{instance.title}}" href="{{ url("mapbender_manager_repository_instance",{"slug": application.slug, "instanceId": instance.id})  }}"></a>
                   <span class="iconRemove iconSmall removeInstance" title="{{"Delete instance"|trans}} {{instance.title}}" data-id="{{ layerset.id }}" data-slug="{{ application.slug }}" data-url="{{ url("mapbender_manager_application_deleteinstance",{"slug": application.slug, 'layersetId': layerset.id, "instanceId": instance.id}) }}"></span>
