switch template added

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -1,4 +1,4 @@
-{{ form_label(form.template) }}{{ form_widget(form.template) }}
+<span class="description right">{{ 'Template' | trans }}: {{template_name}}</span>
 
 {# XXXVH Awesome templating engine plzzz! #}
 {% for region in regions %}
