--- a/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
@@ -16,10 +16,12 @@
         <li id="tabSecurity" class="tab">{{"Security" | trans }}</li>
       </ul>
       <div id="containerBaseData" class="container active containerBaseData">
+        {{ form_label(form.template) }}{{ form_widget(form.template) }}
+        <div class="clearContainer"></div>
         {% include 'MapbenderManagerBundle:Application:form-basic.html.twig' %}
         <div class="messageBox hint">
           {% trans %}Create a new application by providing basic information and then
-          use the edit mode to choose template, add elements and layers.{% endtrans %}
+          use the edit mode to add elements and layers.{% endtrans %}
         </div>
       </div>
       <div id="containerSecurity" class="container">
