--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -33,7 +33,7 @@
             {% endfor %}
               <tr class="placeholderRow"></tr>
           {% else %}
-            <tr>
+            <tr class="dummy">
               <td class="description">{{"No elements added."|trans}}</td>
               <td></td>
               <td></td>
