--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/wmcloader-list.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/wmcloader-list.html.twig
@@ -1,12 +1,14 @@
+{% if 'wmcxmlloader' in configuration.components %}
+<a href="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'loadform' }) }}" class="iconAdd iconSmall loadWmcXml" title="{{'Load XML WMC'|trans}}"></a>
+{% endif %}
+{% if 'wmclistloader' in configuration.components %}
 <table class="elementsTable tableCore">
     <thead>
         <tr>
             <th>{{ 'Id' | trans }}</th>
             <th class="type">{{ 'Title' | trans }}</th>
             <th class="type">{{ 'Description' | trans }}</th>
-            <th class="iconColumn">
-                <a href="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'loadform' }) }}" class="iconAdd iconSmall loadXmlWmc" title="{{'Load XML WMC'|trans}}"></a>
-            </th>
+            <th class="iconColumn"></th>
         </tr>
     </thead>
     <tbody>
@@ -18,7 +20,7 @@
             <td class="typeColumn description">{{ wmc.state.title }}</td>
             <td class="typeColumn description">{{ wmc.abstract }}</td>
             <td class="iconColumn">
-                <span class="iconView iconSmall loadWmc" title="{{"View Wmc"|trans}}  {{wmc.state.title}}" data-id="{{ wmc.id }}"></span>
+                <span class="iconView iconSmall loadWmcId" title="{{"View Wmc"|trans}}  {{wmc.state.title}}" data-id="{{ wmc.id }}"></span>
             </td>
         </tr>
         {% endif %}
@@ -34,3 +36,4 @@
     {% endif %}
     </tbody>
 </table>
+{% endif %}
