systax error removed

--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -55,6 +55,6 @@
 
   <script type="text/javascript">
     var Mapbender = Mapbender || {};
-    Mapbender.configuration = {{ application.configuration | raw }}
+    Mapbender.configuration = {{ application.configuration | raw }};
   </script>
 {% endblock %}
