--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen_alternative.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen_alternative.html.twig
@@ -57,7 +57,7 @@
 
   <script type="text/javascript">
     var Mapbender = Mapbender || {};
-    Mapbender.configuration = {{ application.configuration | raw }}
+    Mapbender.configuration = {{ application.configuration | raw }};
   </script>
   <!-- Dev Tools START -->
     {% javascripts '@FOMCoreBundle/*.js' %}
