--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -14,44 +14,46 @@
 {% endblock %}
 {% block frontend_content %}
 
-  <div class="logoContainer">
-    <img class="logo" height="80" alt="Mapbender 3 Manager" src="{{ asset(fom.server_logo)}}" />
-  </div>
+  <div id="templateWrapper" class="templateWrapper sidePaneOpened">
+    <div class="logoContainer">
+      <img class="logo" height="80" alt="Mapbender 3 Manager" src="{{ asset(fom.server_logo)}}" />
+    </div>
 
-  <ul id="toolbar" class="toolBar itemsRight top">
-    {% if application.elements.toolbar is defined %}
-      {% for element in application.elements.toolbar %}
-        <li class="toolBarItem">{{ element.render() | raw }}</li>
-      {% endfor %}
-    {% endif %}
-  </ul>
-{% if application.elements.sidepane is defined %}
-  <div id="sidepane" class="clear sidePane left">
-    <ul class="sidePaneTabs">
-      <li class="sidePaneTabItem toggleSideBar"></li>
+    <ul id="toolbar" class="toolBar itemsRight top">
+      {% if application.elements.toolbar is defined %}
+        {% for element in application.elements.toolbar %}
+          <li class="toolBarItem">{{ element.render() | raw }}</li>
+        {% endfor %}
+      {% endif %}
     </ul>
-    <div class="sideContent">
-        {% for element in application.elements.sidepane %}
+  {% if application.elements.sidepane is defined %}
+    <div id="sidepane" class="clear sidePane left">
+      <ul class="sidePaneTabs">
+        <li class="sidePaneTabItem toggleSideBar"></li>
+      </ul>
+      <div class="sideContent">
+          {% for element in application.elements.sidepane %}
+            {{ element.render() | raw }}
+          {% endfor %}
+      </div>
+    </div>
+  {% endif %}
+    <div id="content" class="contentPane">
+      {% if application.elements.content is defined %}
+        {% for element in application.elements.content %}
           {{ element.render() | raw }}
         {% endfor %}
+      {% endif %}
     </div>
-  </div>
-{% endif %}
-  <div id="content" class="contentPane">
-    {% if application.elements.content is defined %}
-      {% for element in application.elements.content %}
-        {{ element.render() | raw }}
-      {% endfor %}
-    {% endif %}
-  </div>
 
-  <ul id="footer" class="toolBar itemsRight bottom">
-    {% if application.elements.footer is defined %}
-      {% for element in application.elements.footer %}
-        <li class="toolBarItem">{{ element.render() | raw }}</li>
-      {% endfor %}
-    {% endif %}
-  </ul>
+    <ul id="footer" class="toolBar itemsRight bottom">
+      {% if application.elements.footer is defined %}
+        {% for element in application.elements.footer %}
+          <li class="toolBarItem">{{ element.render() | raw }}</li>
+        {% endfor %}
+      {% endif %}
+    </ul>
+  </div>
 
   <script type="text/javascript">
     var Mapbender = Mapbender || {};
