--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen_alternative.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen_alternative.html.twig
@@ -14,44 +14,46 @@
 {% endblock %}
 {% block frontend_content %}
 
-  <div id="content" class="contentPane">
-    <div class="logoContainer">
-      <img class="logo" height="80" alt="Mapbender 3 Manager" src="{{ asset(fom.server_logo)}}" />
-    </div>
-    <ul id="toolbar" class="toolBar itemsLeft top">
-      {% if application.elements.toolbar is defined %}
-        {% for element in application.elements.toolbar %}
-          <li class="toolBarItem">{{ element.render() | raw }}</li>
-        {% endfor %}
-      {% endif %}
-    </ul>
-
-    {% if application.elements.content is defined %}
-      {% for element in application.elements.content %}
-        {{ element.render() | raw }}
-      {% endfor %}
-    {% endif %}
-
-    <div id="sidepane" class="clear sidePane right">
-      <ul class="sidePaneTabs">
-        <li class="sidePaneTabItem toggleSideBar"></li>
-      </ul>
-      <div class="sideContent">
-        {% if application.elements.sidepane is defined %}
-          {% for element in application.elements.sidepane %}
-            {{ element.render() | raw }}
+  <div id="templateWrapper" class="templateWrapper sidePaneOpened">
+    <div id="content" class="contentPane">
+      <div class="logoContainer">
+        <img class="logo" height="80" alt="Mapbender 3 Manager" src="{{ asset(fom.server_logo)}}" />
+      </div>
+      <ul id="toolbar" class="toolBar itemsLeft top">
+        {% if application.elements.toolbar is defined %}
+          {% for element in application.elements.toolbar %}
+            <li class="toolBarItem">{{ element.render() | raw }}</li>
           {% endfor %}
         {% endif %}
-      </div>
-    </div>
+      </ul>
 
-    <ul id="footer" class="toolBar itemsLeft bottom">
-      {% if application.elements.footer is defined %}
-        {% for element in application.elements.footer %}
-          <li class="toolBarItem">{{ element.render() | raw }}</li>
+      {% if application.elements.content is defined %}
+        {% for element in application.elements.content %}
+          {{ element.render() | raw }}
         {% endfor %}
       {% endif %}
-    </ul>
+
+      <div id="sidepane" class="clear sidePane right">
+        <ul class="sidePaneTabs">
+          <li class="sidePaneTabItem toggleSideBar"></li>
+        </ul>
+        <div class="sideContent">
+          {% if application.elements.sidepane is defined %}
+            {% for element in application.elements.sidepane %}
+              {{ element.render() | raw }}
+            {% endfor %}
+          {% endif %}
+        </div>
+      </div>
+
+      <ul id="footer" class="toolBar itemsLeft bottom">
+        {% if application.elements.footer is defined %}
+          {% for element in application.elements.footer %}
+            <li class="toolBarItem">{{ element.render() | raw }}</li>
+          {% endfor %}
+        {% endif %}
+      </ul>
+    </div>
   </div>
 
   <script type="text/javascript">
