layertree checked changed

--- a/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
@@ -1,5 +1,5 @@
 <div id="{{ id }}" class="mb-element mb-element-wmsloader" title="{{ title |trans }}">
-    <p class="description">{{ "Example"|trans }}: http://wms.wheregroup.com/cgi-bin/germany.xml?VERSION=1.1.1&REQUEST=GetCapabilities&SERVICE=WMS</p>
+    <p class="description">{{ "Example"|trans }}: http://wms.wheregroup.com/cgi-bin/germany.xml?VERSION=1.1.1&amp;REQUEST=GetCapabilities&amp;SERVICE=WMS</p>
     <br>
     <label class="labelInput" for="loadWmsUrl">{{"Service url"|trans}}</label>
     <input name="loadWmsUrl" class="input url" type="text" />
