--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -27,7 +27,7 @@
                     <input class="checkbox" data-url="{{ path('mapbender_manager_element_enable', { 'id': element.id })}}" data-id="{{ element.id }}" type="checkbox" {% if element.enabled %} checked="checked" {% endif %}>
                   </div>
                   <span class="iconEdit editElement iconSmall" title="{{"Edit element"|trans}}  {{element.title}}" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></span>
-                  <span class="iconKey secureElement iconSmall" title="{{"Edit element"|trans}}  {{element.title}}" data-url=""></span>
+                  <span class="iconKey secureElement iconSmall" title="{{"Edit element"|trans}}  {{element.title}}" data-url="{{ path('mapbender_manager_element_security', {'slug': application.slug, 'id': element.id})}}"></span>
                   <span class="iconRemove removeElement iconSmall" title="{{"Delete element"|trans}} {{element.title}}" data-id="{{ element.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></span>
                 </td>
               </tr>
